Bug 1828441 - Part 1 - Disable media sniffing when navigating directly to files served as application/octet-stream r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D188505